--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "canvas": "^2.9.3",
     "ejs": "^3.1.8",
+    "eslint": "^8.20.0",
     "express": "^4.18.1",
     "gifencoder": "^2.0.1"
   }
