--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "ejs": "^3.1.8",
     "eslint": "^8.20.0",
     "express": "^4.18.1",
-    "gifencoder": "^2.0.1"
+    "fs": "^0.0.1-security",
+    "gifencoder": "^2.0.1",
+    "node-fetch": "^3.2.9",
+    "pbf": "^3.2.1",
+    "yaml": "^2.1.1"
   }
 }
