--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "simplymc",
   "version": "1.0.0",
   "description": "The official website for the minecraft multitool simplymc.art",
-  "main": "server.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "dependencies": {
     "canvas": "^2.9.3",
     "ejs": "^3.1.8",
+    "ejs-electron": "^2.1.1",
     "eslint": "^8.20.0",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
@@ -26,5 +27,8 @@
     "node-fetch": "^3.2.9",
     "pbf": "^3.2.1",
     "yaml": "^2.1.1"
+  },
+  "devDependencies": {
+    "electron": "^20.1.1"
   }
 }
