--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "memorystore": "^1.6.7",
+    "node-fetch": "^3.2.10",
     "passport": "^0.6.0",
     "passport-discord": "^0.1.4",
     "pbf": "^3.2.1",
