--- a/package.json
+++ b/package.json
@@ -1,34 +1,46 @@
 {
   "name": "simplymc",
-  "version": "1.0.0",
+  "version": "5.0.0",
   "description": "The official website for the minecraft multitool simplymc.art",
-  "main": "server.js",
+  "engines": {
+    "node": ">=15.0.0"
+  },
   "scripts": {
-    "start": "nodemon server.js"
+    "build": "qwik build",
+    "build.client": "vite build",
+    "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.types": "tsc --incremental --noEmit",
+    "lint": "eslint \"src/**/*.ts*\"",
+    "preview": "qwik build preview && vite preview",
+    "start": "vite --mode ssr --host",
+    "start.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --forcenode --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
+    "qwik": "qwik"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AkiraDevelopment/SimplyMC.git"
-  },
-  "author": "Akiradev, Esophose",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AkiraDevelopment/SimplyMC/issues"
-  },
-  "homepage": "https://github.com/AkiraDevelopment/SimplyMC#readme",
-  "dependencies": {
-    "discord-webhook-node": "^1.1.8",
-    "ejs": "^3.1.8",
-    "eslint": "^8.20.0",
-    "express": "^4.18.1",
-    "express-session": "^1.17.3",
-    "fs": "^0.0.1-security",
-    "memorystore": "^1.6.7",
-    "node-fetch": "^3.2.10",
-    "passport": "^0.6.0",
-    "passport-discord": "^0.1.4",
-    "pbf": "^3.2.1",
-    "sqlite3": "^5.0.11",
-    "yaml": "^2.1.1"
+  "devDependencies": {
+    "@builder.io/partytown": "^0.7.0",
+    "@builder.io/qwik": "0.19.0",
+    "@builder.io/qwik-city": "0.3.0",
+    "@types/eslint": "8.21.1",
+    "@types/node": "latest",
+    "@types/showdown": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "5.53.0",
+    "@typescript-eslint/parser": "5.53.0",
+    "autoprefixer": "10.4.13",
+    "eslint": "8.34.0",
+    "eslint-plugin-qwik": "0.19.0",
+    "express": "^4.18.2",
+    "imagetools-core": "^3.3.1",
+    "node-fetch": "3.3.0",
+    "path": "^0.12.7",
+    "postcss": "^8.4.21",
+    "qwik-feather-icons": "^1.2.0",
+    "showdown": "^2.1.0",
+    "tailwindcss": "^3.2.7",
+    "typescript": "4.9.5",
+    "undici": "^5.20.0",
+    "vite": "4.1.4",
+    "vite-imagetools": "^4.0.18",
+    "vite-tsconfig-paths": "4.0.5",
+    "zod": "^3.20.6"
   }
 }
