--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,12 @@
-
 {
   "compilerOptions": {
     "allowJs": true,
-    "target": "ES2022",
-    "module": "es2022",
-    "lib": ["es2022", "DOM", "WebWorker", "DOM.Iterable"],
+    "target": "ES2017",
+    "module": "ES2020",
+    "lib": ["es2020", "DOM", "WebWorker", "DOM.Iterable"],
     "jsx": "react-jsx",
     "jsxImportSource": "@builder.io/qwik",
     "strict": true,
-    "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
