--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ node_modules
 # Cache
 .cache
 .mf
-.vscode
 .rollup.cache
 tsconfig.tsbuildinfo
 
@@ -24,6 +23,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 # Editor
+.vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
@@ -36,14 +36,6 @@ lerna-debug.log*
 # Yarn
 .yarn/*
 !.yarn/releases
-
-config/
-data/
-/transcript/
-/files/
-.DS_Store
-package-lock.json
-config.json
 
 # Cloudflare
 functions/**/*.js
