--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "simplymc",
-  "version": "5.0.0",
-  "description": "The official website for the minecraft multitool simplymc.art",
+  "name": "my-qwik-basic-starter",
+  "description": "App with Routing built-in (recommended)",
   "engines": {
     "node": ">=15.0.0"
   },
+  "private": true,
   "scripts": {
     "build": "qwik build",
     "build.client": "vite build",
@@ -12,38 +12,37 @@
     "build.server": "vite build -c adapters/cloudflare-pages/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "wrangler pages dev ./dist",
+    "dev": "vite --mode ssr",
+    "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
+    "fmt": "prettier --write .",
+    "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
-    "preview": "qwik build preview && vite preview",
-    "start": "vite --mode ssr --host",
-    "start.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --forcenode --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
+    "preview": "qwik build preview && vite preview --open",
+    "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
   "devDependencies": {
     "@builder.io/partytown": "^0.7.0",
-    "@builder.io/qwik": "0.19.0",
-    "@builder.io/qwik-city": "0.3.0",
+    "@builder.io/qwik": "0.19.2",
+    "@builder.io/qwik-city": "0.4.0",
     "@types/eslint": "8.21.1",
-    "@types/node": "latest",
-    "@types/showdown": "^2.0.0",
+    "@types/node": "^18.14.0",
+    "@types/node-fetch": "latest",
     "@typescript-eslint/eslint-plugin": "5.53.0",
     "@typescript-eslint/parser": "5.53.0",
-    "autoprefixer": "10.4.13",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.34.0",
-    "eslint-plugin-qwik": "0.19.0",
-    "express": "^4.18.2",
+    "eslint-plugin-qwik": "0.19.2",
     "imagetools-core": "^3.3.1",
     "node-fetch": "3.3.0",
-    "path": "^0.12.7",
-    "postcss": "^8.4.21",
-    "qwik-feather-icons": "^1.2.0",
-    "showdown": "^2.1.0",
-    "tailwindcss": "^3.2.7",
+    "postcss": "^8.4.16",
+    "prettier": "2.8.4",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.9.5",
-    "undici": "^5.20.0",
+    "undici": "5.20.0",
     "vite": "4.1.4",
     "vite-imagetools": "^4.0.18",
-    "vite-tsconfig-paths": "4.0.5",
-    "wrangler": "latest",
-    "zod": "^3.20.6"
+    "vite-tsconfig-paths": "3.5.0",
+    "wrangler": "latest"
   }
 }
