--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/partytown": "^0.7.0",
-    "@builder.io/qwik": "0.19.0",
-    "@builder.io/qwik-city": "0.3.0",
+    "@builder.io/partytown": "^0.7.5",
+    "@builder.io/qwik": "0.19.2",
+    "@builder.io/qwik-city": "0.4.0",
     "@types/eslint": "8.21.1",
     "@types/node": "latest",
     "@types/showdown": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "5.53.0",
     "@typescript-eslint/parser": "5.53.0",
     "autoprefixer": "10.4.13",
-    "eslint": "8.34.0",
-    "eslint-plugin-qwik": "0.19.0",
+    "eslint": "8.35.0",
+    "eslint-plugin-qwik": "0.19.2",
     "express": "^4.18.2",
     "imagetools-core": "^3.3.1",
     "node-fetch": "3.3.0",
@@ -45,5 +45,8 @@
     "vite-tsconfig-paths": "4.0.5",
     "wrangler": "latest",
     "zod": "^3.20.6"
+  },
+  "dependencies": {
+    "gif-extract-frames": "^1.0.2"
   }
 }
