--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "8.35.0",
     "eslint-plugin-qwik": "0.19.2",
     "express": "^4.18.2",
+    "gif-extract-frames": "^1.0.2",
     "imagetools-core": "^3.3.1",
     "node-fetch": "3.3.0",
     "path": "^0.12.7",
@@ -45,8 +46,5 @@
     "vite-tsconfig-paths": "4.0.5",
     "wrangler": "latest",
     "zod": "^3.20.6"
-  },
-  "dependencies": {
-    "gif-extract-frames": "^1.0.2"
   }
 }
