--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@builder.io/partytown": "^0.7.5",
-    "@builder.io/qwik": "0.21.0",
+    "@builder.io/qwik": "0.22.0",
     "@builder.io/qwik-city": "0.5.3",
     "@types/eslint": "8.21.2",
     "@types/node": "latest",
@@ -42,6 +42,7 @@
     "path": "^0.12.7",
     "postcss": "^8.4.21",
     "qwik-feather-icons": "^1.2.0",
+    "qwik-speak": "^0.8.0",
     "showdown": "^2.1.0",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5",
