switch from qwik-feather-icons to qwikest/icons, use icons for language, github, and discord, fix animpreview (dumb oli), restyle navbar, remove some redundant classes

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@builder.io/partytown": "^0.7.5",
     "@builder.io/qwik": "0.22.1",
     "@builder.io/qwik-city": "0.6.3",
+    "@qwikest/icons": "^0.0.5",
     "@types/eslint": "8.21.2",
     "@types/node": "latest",
     "@types/pbf": "^3.0.2",
@@ -41,7 +42,6 @@
     "imagetools-core": "^3.3.1",
     "path": "^0.12.7",
     "postcss": "^8.4.21",
-    "qwik-feather-icons": "^1.2.0",
     "qwik-speak": "^0.8.0",
     "showdown": "^2.1.0",
     "tailwindcss": "^3.2.7",
