--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "@typescript-eslint/eslint-plugin": "5.55.0",
     "@typescript-eslint/parser": "5.55.0",
     "autoprefixer": "10.4.14",
-    "canvas": "^2.11.0",
     "eslint": "8.36.0",
     "eslint-plugin-qwik": "0.23.0",
     "express": "^4.18.2",
     "imagetools-core": "^3.3.1",
+    "node-canvas": "^2.9.0",
     "path": "^0.12.7",
     "postcss": "^8.4.21",
     "qwik-speak": "^0.8.0",
