--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/cloudflare-pages/vite.config.ts",
+    "build.server": "vite build -c adapters/cloudflare-pages/vite.config.mts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "wrangler pages dev ./dist",
     "lint": "eslint \"src/**/*.ts*\"",
@@ -26,29 +26,29 @@
   },
   "devDependencies": {
     "@builder.io/partytown": "^0.8.0",
-    "@builder.io/qwik": "1.1.1",
-    "@builder.io/qwik-city": "1.1.1",
+    "@builder.io/qwik": "1.1.4",
+    "@builder.io/qwik-city": "1.1.4",
     "@qwikest/icons": "^0.0.8",
     "@types/eslint": "8.37.0",
     "@types/node": "latest",
     "@types/pbf": "^3.0.2",
     "@types/showdown": "^2.0.1",
-    "@typescript-eslint/eslint-plugin": "5.59.5",
-    "@typescript-eslint/parser": "5.59.5",
+    "@typescript-eslint/eslint-plugin": "5.59.6",
+    "@typescript-eslint/parser": "5.59.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
-    "eslint-plugin-qwik": "1.1.1",
+    "eslint-plugin-qwik": "1.1.4",
     "express": "^4.18.2",
-    "imagetools-core": "^4.0.2",
+    "imagetools-core": "^4.0.3",
     "path": "^0.12.7",
     "postcss": "^8.4.23",
-    "qwik-speak": "^0.12.2",
+    "qwik-speak": "^0.13.0",
     "showdown": "^2.1.0",
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4",
     "undici": "^5.22.1",
-    "vite": "4.3.5",
-    "vite-imagetools": "^4.0.19",
+    "vite": "4.3.8",
+    "vite-imagetools": "^5.0.4",
     "vite-tsconfig-paths": "4.2.0",
     "wrangler": "latest",
     "yaml": "^2.2.2",
