--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,11 @@
 
 # Development
 node_modules
+*.local
 
 # Cache
 .cache
 .mf
-.vscode
 .rollup.cache
 tsconfig.tsbuildinfo
 
@@ -24,6 +24,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 # Editor
+.vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
@@ -37,13 +38,8 @@ lerna-debug.log*
 .yarn/*
 !.yarn/releases
 
-config/
-data/
-/transcript/
-/files/
-.DS_Store
-package-lock.json
-config.json
+# Secrets
+.env
 
 # Cloudflare
 functions/**/*.js
