--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplymc",
-  "version": "5.4.6",
+  "version": "5.5.0",
   "description": "The official website for the minecraft multitool simplymc.art",
   "repository": {
     "type": "git",
@@ -28,7 +28,6 @@
     "@builder.io/partytown": "^0.8.0",
     "@builder.io/qwik": "1.1.4",
     "@builder.io/qwik-city": "1.1.4",
-    "@qwikest/icons": "^0.0.8",
     "@types/eslint": "8.37.0",
     "@types/node": "latest",
     "@types/pbf": "^3.0.2",
@@ -42,6 +41,7 @@
     "imagetools-core": "^4.0.3",
     "path": "^0.12.7",
     "postcss": "^8.4.23",
+    "qwik-ionicons": "^1.0.5",
     "qwik-speak": "^0.13.0",
     "showdown": "^2.1.0",
     "tailwindcss": "^3.3.2",
