--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplymc",
-  "version": "5.5.1",
+  "version": "5.6.0",
   "description": "The official website for the minecraft multitool simplymc.art",
   "repository": {
     "type": "git",
@@ -44,6 +44,7 @@
     "qwik-ionicons": "^1.0.5",
     "qwik-speak": "^0.13.0",
     "showdown": "^2.1.0",
+    "simple-color-picker": "^1.0.5",
     "tailwindcss": "^3.3.2",
     "typescript": "5.0.4",
     "undici": "^5.22.1",
