--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplymc",
-  "version": "5.6.3",
+  "version": "5.7.0",
   "description": "The official website for the minecraft multitool simplymc.art",
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/cloudflare-pages/vite.config.mts",
     "build.types": "tsc --incremental --noEmit",
+    "build.tauri": "vite build -c adapters/static/vite.config.mts",
     "deploy": "wrangler pages dev ./dist",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@builder.io/qwik": "1.1.4",
     "@builder.io/qwik-city": "1.1.4",
+    "@tauri-apps/cli": "^1.3.1",
     "@types/eslint": "8.40.0",
     "@types/node": "latest",
     "@types/pbf": "^3.0.2",
