--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/cloudflare-pages/vite.config.mts",
     "build.types": "tsc --incremental --noEmit",
-    "build.tauri": "vite build -c adapters/static/vite.config.mts",
+    "build.tauri": "vite build && vite build -c adapters/static/vite.config.mts",
     "deploy": "wrangler pages dev ./dist",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview",
