--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "preview": "qwik build preview && vite preview",
     "start": "vite --mode ssr --host",
     "start.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --forcenode --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-    "qwik": "qwik"
+    "qwik": "qwik",
+    "tauri": "tauri"
   },
   "devDependencies": {
     "@builder.io/qwik": "1.1.4",
     "@builder.io/qwik-city": "1.1.4",
-    "@tauri-apps/cli": "^1.3.1",
+    "@tauri-apps/api": "2.0.0-alpha.4",
+    "@tauri-apps/cli": "2.0.0-alpha.9",
     "@types/eslint": "8.40.0",
     "@types/node": "latest",
     "@types/pbf": "^3.0.2",
