--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: 'publish'
 on:
   push:
     branches:
+      - dev
       - v3
 
 jobs:
@@ -48,4 +49,4 @@ jobs:
             Note for Linux users:
             The WebKit implementation is really laggy and outdated on Linux for Tauri so you're better off installing SimplyMC as a web app through your preferred browser.
           releaseDraft: true
-          prerelease: true
+          prerelease: ${{ github.ref != 'refs/heads/v3' }}
