--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@builder.io/qwik-city": "1.1.4",
     "@tauri-apps/api": "2.0.0-alpha.4",
     "@tauri-apps/cli": "2.0.0-alpha.9",
+    "@tauri-apps/plugin-app": "github:tauri-apps/tauri-plugin-app#v2",
+    "@tauri-apps/plugin-window": "github:tauri-apps/tauri-plugin-window#v2",
+    "@tauri-apps/plugin-window-state": "github:tauri-apps/tauri-plugin-window-state#v2",
     "@types/eslint": "8.40.0",
     "@types/node": "latest",
     "@types/pbf": "^3.0.2",
@@ -55,7 +58,7 @@
     "vite-imagetools": "^5.0.4",
     "vite-tsconfig-paths": "4.2.0",
     "wrangler": "latest",
-    "yaml": "^2.2.2",
+    "yaml": "^2.3.0",
     "zod": "^3.21.4"
   }
 }
