--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplymc",
-  "version": "5.7.1",
+  "version": "5.8.0",
   "description": "The official website for the minecraft multitool simplymc.art",
   "repository": {
     "type": "git",
@@ -32,6 +32,8 @@
     "@tauri-apps/api": "2.0.0-alpha.4",
     "@tauri-apps/cli": "2.0.0-alpha.9",
     "@tauri-apps/plugin-app": "github:tauri-apps/tauri-plugin-app#v2",
+    "@tauri-apps/plugin-process": "github:tauri-apps/tauri-plugin-process#v2",
+    "@tauri-apps/plugin-updater": "github:tauri-apps/tauri-plugin-updater#v2",
     "@tauri-apps/plugin-window": "github:tauri-apps/tauri-plugin-window#v2",
     "@tauri-apps/plugin-window-state": "github:tauri-apps/tauri-plugin-window-state#v2",
     "@types/eslint": "8.40.0",
