--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tauri-apps/api": "2.0.0-alpha.4",
     "@tauri-apps/cli": "2.0.0-alpha.9",
     "@tauri-apps/plugin-app": "github:tauri-apps/tauri-plugin-app#v2",
+    "@tauri-apps/plugin-notification": "github:tauri-apps/tauri-plugin-notification#v2",
     "@tauri-apps/plugin-window": "github:tauri-apps/tauri-plugin-window#v2",
     "@tauri-apps/plugin-window-state": "github:tauri-apps/tauri-plugin-window-state#v2",
     "@types/eslint": "8.40.0",
