--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplymc",
-  "version": "5.8.5",
+  "version": "5.8.6",
   "description": "The official website for the minecraft multitool simplymc.art",
   "repository": {
     "type": "git",
@@ -15,9 +15,9 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/cloudflare-pages/vite.config.mts",
+    "build.server": "vite build -c adapters/cloudflare-pages/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
-    "build.tauri": "vite build && vite build -c adapters/static/vite.config.mts",
+    "build.tauri": "vite build && vite build -c adapters/static/vite.config.ts",
     "deploy": "wrangler pages dev ./dist",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview",
@@ -39,27 +39,21 @@
     "@types/node": "latest",
     "@types/pbf": "^3.0.2",
     "@types/showdown": "^2.0.1",
-    "@typescript-eslint/eslint-plugin": "5.59.9",
-    "@typescript-eslint/parser": "5.59.9",
+    "@typescript-eslint/eslint-plugin": "6.0.0",
+    "@typescript-eslint/parser": "6.0.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-plugin-qwik": "1.2.6",
-    "express": "^4.18.2",
-    "imagetools-core": "^4.0.3",
-    "path": "^0.12.7",
     "postcss": "^8.4.24",
     "qwik-ionicons": "^1.0.5",
     "qwik-speak": "^0.15.0",
-    "showdown": "^2.1.0",
     "simple-color-picker": "^1.0.5",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.6",
     "undici": "^5.22.1",
     "vite": "4.4.4",
-    "vite-imagetools": "^5.0.4",
     "vite-tsconfig-paths": "4.2.0",
     "wrangler": "latest",
-    "yaml": "^2.3.1",
-    "zod": "^3.21.4"
+    "yaml": "^2.3.1"
   }
 }
