--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "vite": "4.4.9",
     "vite-tsconfig-paths": "4.2.1",
     "wrangler": "latest",
-    "yaml": "^2.3.2"
+    "yaml": "^2.3.2",
+    "zod": "^3.22.4"
   }
 }
