--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplymc",
-  "version": "5.9.0",
+  "version": "6.0.0",
   "description": "The official website for the minecraft multitool simplymc.art",
   "repository": {
     "type": "git",
@@ -27,34 +27,34 @@
     "tauri": "tauri"
   },
   "devDependencies": {
-    "@builder.io/qwik": "1.2.15",
-    "@builder.io/qwik-city": "1.2.15",
+    "@builder.io/qwik": "1.3.1",
+    "@builder.io/qwik-city": "1.3.1",
     "@tauri-apps/api": "2.0.0-alpha.6",
     "@tauri-apps/cli": "2.0.0-alpha.11",
     "@tauri-apps/plugin-app": "github:tauri-apps/tauri-plugin-app#v2",
     "@tauri-apps/plugin-notification": "github:tauri-apps/tauri-plugin-notification#v2",
     "@tauri-apps/plugin-window": "github:tauri-apps/tauri-plugin-window#v2",
     "@tauri-apps/plugin-window-state": "github:tauri-apps/tauri-plugin-window-state#v2",
-    "@types/eslint": "8.44.6",
+    "@types/eslint": "8.44.9",
     "@types/node": "latest",
-    "@types/pbf": "^3.0.4",
-    "@types/showdown": "^2.0.3",
-    "@typescript-eslint/eslint-plugin": "6.9.0",
-    "@typescript-eslint/parser": "6.9.0",
+    "@typescript-eslint/eslint-plugin": "6.14.0",
+    "@typescript-eslint/parser": "6.14.0",
+    "@img/sharp-win32-x64": "^0.33.1",
+    "@img/sharp-linux-x64": "^0.33.1",
     "autoprefixer": "10.4.16",
-    "eslint": "8.52.0",
-    "eslint-plugin-qwik": "1.2.15",
-    "postcss": "^8.4.31",
+    "eslint": "8.56.0",
+    "eslint-plugin-qwik": "1.3.1",
+    "postcss": "^8.4.32",
     "qwik-ionicons": "^1.0.5",
-    "qwik-speak": "^0.16.0",
+    "qwik-speak": "^0.18.0",
     "simple-color-picker": "^1.0.5",
-    "tailwindcss": "^3.3.5",
-    "typescript": "5.2.2",
-    "undici": "^5.27.0",
-    "vite": "4.5.0",
-    "vite-tsconfig-paths": "4.2.1",
+    "tailwindcss": "^3.3.6",
+    "typescript": "5.3.3",
+    "undici": "^6.0.1",
+    "vite": "5.0.10",
+    "vite-tsconfig-paths": "4.2.2",
     "wrangler": "latest",
-    "yaml": "^2.3.3",
+    "yaml": "^2.3.4",
     "zod": "^3.22.4"
   }
 }
