--- a/package.json
+++ b/package.json
@@ -29,18 +29,16 @@
   "devDependencies": {
     "@builder.io/qwik": "1.3.1",
     "@builder.io/qwik-city": "1.3.1",
-    "@tauri-apps/api": "2.0.0-alpha.6",
-    "@tauri-apps/cli": "2.0.0-alpha.11",
-    "@tauri-apps/plugin-app": "github:tauri-apps/tauri-plugin-app#v2",
+    "@img/sharp-linux-x64": "^0.33.1",
+    "@img/sharp-win32-x64": "^0.33.1",
+    "@tauri-apps/api": "next",
+    "@tauri-apps/cli": "next",
     "@tauri-apps/plugin-notification": "github:tauri-apps/tauri-plugin-notification#v2",
-    "@tauri-apps/plugin-window": "github:tauri-apps/tauri-plugin-window#v2",
     "@tauri-apps/plugin-window-state": "github:tauri-apps/tauri-plugin-window-state#v2",
     "@types/eslint": "8.44.9",
     "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "6.14.0",
     "@typescript-eslint/parser": "6.14.0",
-    "@img/sharp-win32-x64": "^0.33.1",
-    "@img/sharp-linux-x64": "^0.33.1",
     "autoprefixer": "10.4.16",
     "eslint": "8.56.0",
     "eslint-plugin-qwik": "1.3.1",
