--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@builder.io/qwik-city": "1.3.1",
     "@img/sharp-linux-x64": "^0.33.1",
     "@img/sharp-win32-x64": "^0.33.1",
-    "@tauri-apps/api": "next",
-    "@tauri-apps/cli": "next",
+    "@tauri-apps/api": "2.0.0-alpha.12",
+    "@tauri-apps/cli": "2.0.0-alpha.18",
     "@tauri-apps/plugin-notification": "github:tauri-apps/tauri-plugin-notification#v2",
     "@tauri-apps/plugin-window-state": "github:tauri-apps/tauri-plugin-window-state#v2",
     "@types/eslint": "8.44.9",
