--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@builder.io/qwik": "1.3.1",
     "@builder.io/qwik-city": "1.3.1",
+    "@img/sharp-darwin-x64": "^0.33.1",
     "@img/sharp-linux-x64": "^0.33.1",
     "@img/sharp-win32-x64": "^0.33.1",
     "@tauri-apps/api": "2.0.0-alpha.12",
