load color picker on click instead of document load and move arrows to end of colors and tweak numberinput

--- a/renovate.json
+++ b/renovate.json
@@ -4,11 +4,5 @@
     "config:base"
   ],
   "groupName": "All",
-  "baseBranches": ["dev"],
-  "packageRules": [
-    {
-      "matchPackagePatterns": ["*"],
-      "automerge": true
-    }
-  ]
+  "baseBranches": ["dev"]
 }
