--- a/.github/workflows/tauri.yml
+++ b/.github/workflows/tauri.yml
@@ -48,6 +48,6 @@ jobs:
           releaseName: 'App v__VERSION__'
           releaseBody: |
             Note for Linux users:
-            The WebKit implementation is really laggy and outdated on Linux for Tauri so you're better off installing SimplyMC as a web app through your preferred browser.
+            The WebKit implementation is really laggy and outdated on Linux for Tauri so you're better off installing Birdflop as a web app through your preferred browser.
           releaseDraft: true
           prerelease: ${{ github.ref != 'refs/heads/v3' }}
