begin to implement auth? idk

--- a/package.json
+++ b/package.json
@@ -19,17 +19,24 @@
     "build.types": "tsc --incremental --noEmit",
     "deploy": "wrangler pages dev ./dist",
     "lint": "eslint \"src/**/*.ts*\"",
+    "postinstall": "prisma generate",
     "preview": "qwik build preview && vite preview",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:prod": "prisma migrate deploy",
     "start": "vite --mode ssr --host",
     "start.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --forcenode --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "qwik": "qwik"
   },
   "devDependencies": {
+    "@auth/core": "^0.13.0",
     "@builder.io/qwik": "1.4.0",
+    "@builder.io/qwik-auth": "0.1.1",
     "@builder.io/qwik-city": "1.4.0",
     "@img/sharp-darwin-x64": "^0.33.2",
     "@img/sharp-linux-x64": "^0.33.2",
     "@img/sharp-win32-x64": "^0.33.2",
+    "@prisma/client": "5.3.1",
     "@types/eslint": "8.56.2",
     "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "6.19.1",
@@ -38,6 +45,7 @@
     "eslint": "8.56.0",
     "eslint-plugin-qwik": "1.4.0",
     "postcss": "^8.4.33",
+    "prisma": "^5.3.1",
     "qwik-ionicons": "^1.0.5",
     "qwik-speak": "^0.19.0",
     "simple-color-picker": "^1.0.5",
