--- a/package.json
+++ b/package.json
@@ -33,10 +33,7 @@
     "@builder.io/qwik": "1.4.0",
     "@builder.io/qwik-auth": "0.1.1",
     "@builder.io/qwik-city": "1.4.0",
-    "@img/sharp-darwin-x64": "^0.33.2",
-    "@img/sharp-linux-x64": "^0.33.2",
-    "@img/sharp-win32-x64": "^0.33.2",
-    "@prisma/client": "5.3.1",
+    "@prisma/client": "^5.9.0",
     "@types/eslint": "8.56.2",
     "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "6.19.1",
@@ -45,17 +42,20 @@
     "eslint": "8.56.0",
     "eslint-plugin-qwik": "1.4.0",
     "postcss": "^8.4.33",
-    "prisma": "^5.3.1",
+    "prisma": "^5.9.0",
     "qwik-ionicons": "^1.0.5",
     "qwik-speak": "^0.19.0",
     "simple-color-picker": "^1.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "5.3.3",
-    "undici": "^6.4.0",
+    "undici": "^6.5.0",
     "vite": "5.0.12",
     "vite-tsconfig-paths": "4.3.1",
     "wrangler": "latest",
     "yaml": "^2.3.4",
     "zod": "^3.22.4"
+  },
+  "dependencies": {
+    "@auth/prisma-adapter": "^1.2.0"
   }
 }
