--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "birdflop",
   "version": "7.0.0",
-  "description": "The only 501(c)(3) nonprofit Minecraft server host and multitool.",
+  "description": "The only 501(c)(3) nonprofit Minecraft server host.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LuminescentDev/SimplyMC.git"
@@ -30,32 +30,32 @@
   },
   "devDependencies": {
     "@auth/core": "^0.13.0",
-    "@auth/prisma-adapter": "^1.2.1",
-    "@builder.io/qwik": "1.4.3",
+    "@auth/prisma-adapter": "^1.3.3",
+    "@builder.io/qwik": "1.4.4",
     "@builder.io/qwik-auth": "0.1.3",
-    "@builder.io/qwik-city": "1.4.3",
+    "@builder.io/qwik-city": "1.4.4",
+    "@modular-forms/qwik": "^0.23.1",
     "@prisma/client": "^5.9.1",
     "@types/eslint": "8.56.2",
     "@types/node": "latest",
-    "@typescript-eslint/eslint-plugin": "6.20.0",
-    "@typescript-eslint/parser": "6.20.0",
-    "@modular-forms/qwik": "^0.23.1",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "autoprefixer": "10.4.17",
+    "chart.js": "^4.4.1",
     "eslint": "8.56.0",
-    "eslint-plugin-qwik": "1.4.3",
-    "postcss": "^8.4.33",
+    "eslint-plugin-qwik": "1.4.4",
+    "postcss": "^8.4.35",
     "prisma": "^5.9.1",
     "qwik-ionicons": "^1.0.5",
     "qwik-speak": "^0.21.0",
     "simple-color-picker": "^1.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "5.3.3",
-    "undici": "^6.6.0",
-    "vite": "5.0.12",
+    "undici": "^6.6.2",
+    "vite": "5.1.0",
     "vite-tsconfig-paths": "4.3.1",
     "wrangler": "latest",
     "yaml": "^2.3.4",
     "zod": "^3.22.4"
-  },
-  "dependencies": {}
+  }
 }
