--- a/package.json
+++ b/package.json
@@ -30,13 +30,12 @@
   },
   "devDependencies": {
     "@auth/core": "^0.13.0",
-    "@auth/prisma-adapter": "^1.2.0",
+    "@auth/prisma-adapter": "1.3.3",
     "@builder.io/qwik": "1.4.4",
-    "@builder.io/qwik-auth": "0.1.3",
+    "@builder.io/qwik-auth": "0.1.1",
     "@builder.io/qwik-city": "1.4.4",
     "@modular-forms/qwik": "^0.23.1",
     "@prisma/client": "^5.9.1",
-    "@prisma/extension-accelerate": "^0.6.3",
     "@types/eslint": "8.56.2",
     "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "6.21.0",
