--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "build.types": "tsc --incremental --noEmit",
     "deploy": "wrangler pages dev ./dist",
     "lint": "eslint \"src/**/*.ts*\"",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate --no-engine",
     "preview": "qwik build preview && vite preview",
-    "prisma:generate": "prisma generate",
+    "prisma:generate": "prisma generate --no-engine",
     "prisma:migrate": "prisma migrate dev",
     "prisma:migrate:prod": "prisma migrate deploy",
     "start": "vite --mode ssr --host",
