--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "birdflop",
   "version": "7.0.0",
+  "homepage": "https://www.birdflop.com",
   "description": "The only 501(c)(3) nonprofit Minecraft server host.",
   "repository": {
     "type": "git",
