--- a/.github/workflows/crowdin-action.yml
+++ b/.github/workflows/crowdin-action.yml
@@ -4,13 +4,10 @@ on:
     branches:
       - dev
 
-permissions:
-  contents: write
-  pull-requests: write
-
 jobs:
   synchronize-with-crowdin:
     runs-on: ubuntu-latest
+    permissions: write-all
 
     steps:
       - name: Checkout
