--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "qwik": "qwik"
   },
   "devDependencies": {
+    "@builder.io/partytown": "^0.8.1",
     "@builder.io/qwik": "1.4.5",
     "@builder.io/qwik-city": "1.4.5",
     "@modular-forms/qwik": "^0.23.1",
