--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/partytown": "^0.8.1",
+    "@builder.io/partytown": "^0.9.2",
     "@builder.io/qwik": "1.4.5",
     "@builder.io/qwik-city": "1.4.5",
+    "@luminescent/ui": "^0.4.1",
     "@modular-forms/qwik": "^0.23.1",
     "@types/eslint": "8.56.2",
     "@types/node": "latest",
@@ -45,7 +46,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "5.3.3",
     "undici": "^6.6.2",
-    "vite": "5.1.1",
+    "vite": "5.1.3",
     "vite-tsconfig-paths": "4.3.1",
     "wrangler": "latest",
     "yaml": "^2.3.4",
