--- a/package.json
+++ b/package.json
@@ -26,15 +26,16 @@
     "qwik": "qwik"
   },
   "devDependencies": {
+    "@anuragroy/tailwindcss-animate": "^1.0.6",
     "@builder.io/partytown": "^0.9.2",
     "@builder.io/qwik": "1.4.5",
     "@builder.io/qwik-city": "1.4.5",
-    "@luminescent/ui": "^0.4.2",
+    "@luminescent/ui": "^0.5.1",
     "@modular-forms/qwik": "^0.23.1",
     "@types/eslint": "8.56.2",
     "@types/node": "latest",
-    "@typescript-eslint/eslint-plugin": "7.0.1",
-    "@typescript-eslint/parser": "7.0.1",
+    "@typescript-eslint/eslint-plugin": "7.0.2",
+    "@typescript-eslint/parser": "7.0.2",
     "autoprefixer": "10.4.17",
     "chart.js": "^4.4.1",
     "eslint": "8.56.0",
