--- a/package.json
+++ b/package.json
@@ -20,19 +20,28 @@
     "build.types": "tsc --incremental --noEmit",
     "deploy": "wrangler pages dev ./dist",
     "lint": "eslint \"src/**/*.ts*\"",
+    "postinstall": "prisma generate",
     "preview": "qwik build preview && vite preview",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:prod": "prisma migrate deploy",
+    "qwik-speak-extract": "qwik-speak-extract --supportedLangs=da-DK,en-US,es-ES,ko-KR,nl-NL,pl-PL,pt-PT,ru-RU,tr-TR,zh-CN --assetsPath=i18n",
     "start": "vite --mode ssr --host",
     "start.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --forcenode --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-    "qwik": "qwik",
-    "qwik-speak-extract": "qwik-speak-extract --supportedLangs=da-DK,en-US,es-ES,ko-KR,nl-NL,pl-PL,pt-PT,ru-RU,tr-TR,zh-CN --assetsPath=i18n"
+    "qwik": "qwik"
   },
   "devDependencies": {
     "@anuragroy/tailwindcss-animate": "^1.0.6",
+    "@auth/core": "^0.13.0",
+    "@auth/prisma-adapter": "^1.4.0",
     "@builder.io/partytown": "^0.9.2",
     "@builder.io/qwik": "1.4.5",
+    "@builder.io/qwik-auth": "0.1.1",
     "@builder.io/qwik-city": "1.4.5",
     "@luminescent/ui": "^0.7.7",
     "@modular-forms/qwik": "^0.23.1",
+    "@prisma/client": "5.10.2",
+    "@prisma/extension-accelerate": "^0.6.3",
     "@types/eslint": "8.56.2",
     "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "7.0.2",
@@ -42,6 +51,7 @@
     "eslint": "8.56.0",
     "eslint-plugin-qwik": "1.4.5",
     "postcss": "^8.4.35",
+    "prisma": "^5.10.2",
     "qwik-ionicons": "^1.0.5",
     "qwik-speak": "^0.21.0",
     "tailwindcss": "^3.4.1",
