--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
   },
   "devDependencies": {
     "@anuragroy/tailwindcss-animate": "^1.0.6",
-    "@builder.io/partytown": "^0.9.2",
+    "@builder.io/partytown": "^0.10.0",
     "@builder.io/qwik": "1.4.5",
     "@builder.io/qwik-city": "1.4.5",
-    "@luminescent/ui": "^0.9.0",
+    "@luminescent/ui": "0.10.0-1",
     "@modular-forms/qwik": "^0.23.1",
     "@types/eslint": "8.56.5",
     "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "7.1.0",
     "@typescript-eslint/parser": "7.1.0",
-    "autoprefixer": "10.4.17",
+    "autoprefixer": "10.4.18",
     "chart.js": "^4.4.2",
     "eslint": "8.57.0",
     "eslint-plugin-qwik": "1.4.5",
