--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@builder.io/partytown": "^0.10.0",
     "@builder.io/qwik": "1.4.5",
     "@builder.io/qwik-city": "1.4.5",
-    "@luminescent/ui": "0.10.0-4",
+    "@luminescent/ui": "0.11.0",
     "@modular-forms/qwik": "^0.23.1",
     "@types/eslint": "8.56.5",
     "@types/node": "latest",
@@ -46,7 +46,7 @@
     "qwik-speak": "^0.21.0",
     "tailwindcss": "^3.4.1",
     "typescript": "5.3.3",
-    "undici": "^6.6.2",
+    "undici": "^6.7.0",
     "vite": "5.1.4",
     "vite-tsconfig-paths": "4.3.1",
     "wrangler": "latest",
