--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
   },
   "devDependencies": {
     "@anuragroy/tailwindcss-animate": "^1.0.6",
+    "@auth/core": "^0.13.0",
+    "@auth/prisma-adapter": "^1.4.0",
     "@builder.io/partytown": "^0.10.1",
     "@builder.io/qwik": "1.5.1",
+    "@builder.io/qwik-auth": "0.1.1",
     "@builder.io/qwik-city": "1.5.1",
     "@luminescent/ui": "0.12.10",
     "@modular-forms/qwik": "^0.23.1",
