--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "birdflop",
-  "version": "8.11.0",
+  "version": "8.11.0-hotfix.0",
   "homepage": "https://www.birdflop.com",
   "description": "The only 501(c)(3) nonprofit Minecraft server host.",
   "repository": {
