migrate to luminescent ui rewrite pt1

--- a/package.json
+++ b/package.json
@@ -29,28 +29,29 @@
   "devDependencies": {
     "@anuragroy/tailwindcss-animate": "^1.0.6",
     "@builder.io/partytown": "^0.10.2",
-    "@builder.io/qwik": "1.5.7",
-    "@builder.io/qwik-city": "1.5.7",
-    "@luminescent/ui": "0.18.2",
-    "@modular-forms/qwik": "^0.25.0",
-    "@types/eslint": "8.56.10",
+    "@builder.io/qwik": "1.8.0",
+    "@builder.io/qwik-city": "1.8.0",
+    "@luminescent/ui": "1.2.8",
+    "@luminescent/ui-qwik": "^1.2.8",
+    "@modular-forms/qwik": "^0.26.1",
+    "@types/eslint": "8.56.11",
     "@types/node": "latest",
-    "@typescript-eslint/eslint-plugin": "7.13.0",
-    "@typescript-eslint/parser": "7.13.0",
-    "autoprefixer": "10.4.19",
-    "chart.js": "^4.4.3",
+    "@typescript-eslint/eslint-plugin": "8.2.0",
+    "@typescript-eslint/parser": "8.2.0",
+    "autoprefixer": "10.4.20",
+    "chart.js": "^4.4.4",
     "eslint": "8.57.0",
-    "eslint-plugin-qwik": "1.5.7",
-    "postcss": "^8.4.38",
+    "eslint-plugin-qwik": "1.8.0",
+    "postcss": "^8.4.41",
     "qwik-ionicons": "^1.0.5",
     "qwik-speak": "^0.23.0",
-    "tailwindcss": "^3.4.4",
-    "typescript": "5.4.5",
-    "undici": "^6.19.2",
-    "vite": "5.3.0",
-    "vite-tsconfig-paths": "4.3.2",
+    "tailwindcss": "^3.4.10",
+    "typescript": "5.5.4",
+    "undici": "^6.19.8",
+    "vite": "5.4.2",
+    "vite-tsconfig-paths": "5.0.1",
     "wrangler": "latest",
-    "yaml": "^2.4.5",
+    "yaml": "^2.5.0",
     "zod": "^3.23.8"
   },
   "packageManager": "pnpm@9.3.0+sha512.ee7b93e0c2bd11409c6424f92b866f31d3ea1bef5fbe47d3c7500cdc3c9668833d2e55681ad66df5b640c61fa9dc25d546efa54d76d7f8bf54b13614ac293631"
