--- a/package.json
+++ b/package.json
@@ -20,20 +20,28 @@
     "build.types": "tsc --incremental --noEmit",
     "deploy": "wrangler pages dev ./dist",
     "lint": "eslint \"src/**/*.ts*\"",
+    "postinstall": "prisma generate",
     "preview": "qwik build preview && vite preview",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:prod": "prisma migrate deploy",
+    "qwik-speak-extract": "qwik-speak-extract --supportedLangs=da-DK,en-US,es-ES,ko-KR,nl-NL,pl-PL,pt-PT,ru-RU,tr-TR,zh-CN --assetsPath=i18n",
     "start": "vite --mode ssr --host",
     "start.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --forcenode --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-    "qwik": "qwik",
-    "qwik-speak-extract": "qwik-speak-extract --supportedLangs=da-DK,en-US,es-ES,ko-KR,nl-NL,pl-PL,pt-PT,ru-RU,tr-TR,zh-CN --assetsPath=i18n"
+    "qwik": "qwik"
   },
   "devDependencies": {
     "@anuragroy/tailwindcss-animate": "^1.0.6",
+    "@auth/prisma-adapter": "^2.4.2",
+    "@auth/qwik": "0.2.2",
     "@builder.io/partytown": "^0.10.2",
     "@builder.io/qwik": "1.8.0",
     "@builder.io/qwik-city": "1.8.0",
     "@luminescent/ui": "1.2.9",
     "@luminescent/ui-qwik": "^1.2.9",
     "@modular-forms/qwik": "^0.26.1",
+    "@prisma/client": "5.3.1",
+    "@prisma/extension-accelerate": "^1.1.0",
     "@types/eslint": "^8.56.11",
     "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "8.2.0",
@@ -43,6 +51,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-qwik": "1.8.0",
     "postcss": "^8.4.41",
+    "prisma": "^5.3.1",
     "qwik-ionicons": "^1.0.5",
     "qwik-speak": "^0.23.0",
     "tailwindcss": "^3.4.10",
